--- a/Rocket.toml
+++ b/Rocket.toml
@@ -1,5 +1,8 @@
+[global]
+template_dir = "templates/"
+
 [development]
-template_dir = "./templates/"
+template_dir = "templates/"
 
 [production]
-template_dir = "/app/templates/"
+template_dir = "templates/"
