--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,11 @@ edition = "2018"
 [dependencies]
 lazy_static = "1.4.0"
 structopt = "0.3"
-rocket = "0.4.6"
+
+[dependencies.rocket]
+version = "0.4.6"
+default-features = true
+features = ["private-cookies"]
 
 [dependencies.rocket_contrib]
 version = "0.4.6"
