--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,11 +9,7 @@ edition = "2018"
 [dependencies]
 lazy_static = "1.4.0"
 structopt = "0.3"
-
-[dependencies.rocket]
-version = "0.4.6"
-default-features = true
-features = ["private-cookies"]
+rocket = "0.4.6"
 
 [dependencies.rocket_contrib]
 version = "0.4.6"
