--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 lazy_static = "1.4.0"
 structopt = "0.3"
 rocket = "0.4.6"
+base64 = "0.13.0"
 
 [dependencies.rocket_contrib]
 version = "0.4.6"
